@@ -78,7 +78,7 @@ foreach ($this->data['mediatypes'] as $mediaType) {
 	$actionLinks = array();
 	if (!empty($mediaType['listOfActions'])) {
 		foreach ($mediaType['listOfActions'] as $action) {
-			$actionLinks[] = new CLink($action['name'], 'actionconf.php?form=edit&actionid='.$action['actionid']);
+			$actionLinks[] = new CLink($action['name'], 'actionconf.php?form=update&actionid='.$action['actionid']);
 			$actionLinks[] = ', ';
 		}
 		array_pop($actionLinks);
